# smart_commits

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/ai/: openai.rs
src/git/: diff.rs
